--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "fs": "0.0.1-security",
     "pug": "^2.0.0-rc.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
