--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
+    "react-sticky": "^6.0.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
