--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "pug": "^2.0.0-rc.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-modal": "^2.2.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-sticky": "^6.0.1",
+    "react-tooltip": "^3.3.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
